--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,70 +1,48 @@
-#------------------------------------------------------------------------------#
-# vi: set sw=4 ts=4 ai:                            ("set modeline" in ~/.exrc) #
-#------------------------------------------------------------------------------#
-# Config file  : ~/.tmux.conf                                                  #
-#                                                                              #
-# Author       : Ton Kersten                                   The Netherlands #
-#------------------------------------------------------------------------------#
+# change the prefix from 'C-b' to 'C-a'
+# (remap capslock to CTRL for easy access)
+unbind C-b
+set -g prefix C-a
+bind C-a send-prefix
 
-# I use all Alt-Keys instead of Ctrl. This because I use a lot of Ctrl in
-# Vim / Bash / ZSH and so on and I don't like to use the Prefix all the time.
-# And.... this also works on OSX with iTerm2 ;-)
+# start with window 1 (instead of 0)
+set -g base-index 1
 
-## For `bash` use this piece of code to set the window title to the hostname
-##
-## PS1="\u@\h:\w \$ "
-## export PROMPT_COMMAND=precmd
-## precmd() {
-##	if [[ ( ${-} = *i* ) && ( $TERM == screen* ) ]]
-##	then
-##		printf "\ek$(hostname -s)\e\\"
-##	fi
-## }
+# start with pane 1
+set -g pane-base-index 1
 
-# Set that stupid Esc-Wait almost off, so VI is usable again
-set-option -sg	escape-time 1
+# split panes using | and -, make sure they open in the same path
+bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
 
-# Set the default shell. I like zsh
-set-option -g default-shell /bin/zsh
+unbind '"'
+unbind %
 
-# Forward these environment variables (For Gnome Terminal Profiles)
-set-option -sg	update-environment TERM_PROFILE
+# open new windows in the current path
+bind c new-window -c "#{pane_current_path}"
 
-# Set the prefix to Alt-A
-set-option -g	prefix M-a
-bind-key M-a	send-prefix
+# reload config file
+bind r source-file ~/.tmux.conf
 
-# Set clipboard sync
-set-option -g   set-clipboard on
+unbind p
+bind p previous-window
 
-# Start in the home directory
-#set-option -sg	default-path "~"
+# shorten command delay
+set -sg escape-time 1
 
-# All kind of nice, global options
-set-option -g	bell-action any
-set-option -g	default-terminal "screen-256color"
-set-option -g	display-panes-colour brightred
-set-option -g	history-limit 100000
-set-option -g	message-style bg=red,fg=brightyellow
-set-option -g	repeat-time 500
-set-option -g	visual-activity off
-set-option -g	visual-bell on
-set-option -g	set-titles off
-set-option -g	set-titles-string ' #I-#W '
-set-option -g	terminal-overrides 'xterm*:smcup@:rmcup@'
-set-option -g	base-index 1
+# don't rename windows automatically
+set -g allow-rename off
 
-set-option -g	display-panes-colour brightred
-set-option -g	pane-border-style fg=yellow,bg=default
-set-option -g	pane-active-border-style fg=brightmagenta,bg=default
+# mouse control (clickable windows, panes, resizable panes)
+set -g mouse on
 
-# Screen lock (needs the vlock command installed)
-bind-key C-x	lock-server
-bind-key x		lock-server
-bind-key -n M-x	lock-server
-set-option -g	lock-after-time 0
-# set-option -g	lock-server on
-set-option -g	lock-command "vlock"
+# Use Alt-arrow keys without prefix key to switch panes
+bind -n Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
+
+# enable vi mode keys
+set-window-option -g mode-keys vi
 
 # statusbar
 #set-option -g	status-utf8 on
@@ -99,145 +77,3 @@ set-window-option -g allow-rename
 #
 set-window-option -g window-status-format ' #I-#F:#W '
 set-window-option -g window-status-current-format ' #I-#F-#W '
-
-# Remap keys to my settings
-unbind-key d		; bind-key d			detach-client
-unbind-key M-r		; bind-key -n M-r		refresh-client
-
-unbind-key M-c		; bind-key -n M-c		command-prompt -p "tmux:"
-unbind-key M-m		; bind-key -n M-m		command-prompt -p "Man:" "split-window 'man %%'"
-#unbind-key M-d		; bind-key -n M-d		command-prompt -p "Dig:" "split-window 'dig %% | less'"
-unbind-key Tab		; bind-key Tab			choose-window
-unbind-key M-w		; bind-key -n M-w		choose-window
-unbind-key M-e		; bind-key -n M-e		choose-session
-
-# Create windows
-unbind-key M-t		; bind-key -n M-t		new-window
-unbind-key t		; bind-key t			new-window
-
-# Move in windows
-unbind-key M-`		; bind-key -n M-`		last-window
-unbind-key n		; bind-key n			next-window
-unbind-key p		; bind-key p			previous-window
-unbind-key M-n		; bind-key -n M-n		next-window
-unbind-key M-p		; bind-key -n M-p		previous-window
-unbind-key M-right	; bind-key -n M-right	next-window
-unbind-key M-left	; bind-key -n M-left	previous-window
-unbind-key 1		; bind-key 1			select-window -t 1
-unbind-key 2 		; bind-key 2			select-window -t 2
-unbind-key 3		; bind-key 3			select-window -t 3
-unbind-key 4		; bind-key 4			select-window -t 4
-unbind-key 5		; bind-key 5			select-window -t 5
-unbind-key 6		; bind-key 6			select-window -t 6
-unbind-key 7		; bind-key 7			select-window -t 7
-unbind-key 8		; bind-key 8			select-window -t 8
-unbind-key 9		; bind-key 9			select-window -t 9
-unbind-key 0		; bind-key 0			select-window -t 10
-unbind-key M-1		; bind-key -n M-1		select-window -t 1
-unbind-key M-2		; bind-key -n M-2		select-window -t 2
-unbind-key M-3		; bind-key -n M-3		select-window -t 3
-unbind-key M-4		; bind-key -n M-4		select-window -t 4
-unbind-key M-5		; bind-key -n M-5		select-window -t 5
-unbind-key M-6		; bind-key -n M-6		select-window -t 6
-unbind-key M-7		; bind-key -n M-7		select-window -t 7
-unbind-key M-8		; bind-key -n M-8		select-window -t 8
-unbind-key M-9		; bind-key -n M-9		select-window -t 9
-unbind-key M-0		; bind-key -n M-0		select-window -t 10
-
-# Split windows
-unbind-key M--		; bind-key -n M--		split-window -v
-unbind-key M-|		; bind-key -n M-|		split-window -h
-unbind-key -		; bind-key -			split-window -v
-unbind-key |		; bind-key |			split-window -h
-unbind-key M-\\		; bind-key -n M-\\		split-window -h
-
-# Move in panes
-unbind-key left		; bind-key left			select-pane -L
-unbind-key right	; bind-key right		select-pane -R
-unbind-key up		; bind-key up			select-pane -U
-unbind-key down		; bind-key down			select-pane -D
-unbind-key M-h		; bind-key -n M-h		select-pane -L
-unbind-key M-k		; bind-key -n M-k		select-pane -U
-unbind-key M-j		; bind-key -n M-j		select-pane -D
-unbind-key M-l		; bind-key -n M-l		select-pane -R
-unbind-key M-up		; bind-key -n M-up		select-pane -t :.+
-unbind-key M-down	; bind-key -n M-down	select-pane -t :.-
-unbind-key S-left	; bind-key -n S-left	select-pane -L
-unbind-key S-right	; bind-key -n S-right	select-pane -R
-unbind-key S-up		; bind-key -n S-up		select-pane -U
-unbind-key S-down	; bind-key -n S-down	select-pane -D
-
-# Resize panes
-unbind-key j		; bind-key -r j			resize-pane -D 5
-unbind-key k		; bind-key -r k			resize-pane -U 5
-unbind-key h		; bind-key -r h			resize-pane -L 5
-unbind-key l		; bind-key -r l			resize-pane -R 5
-unbind-key M-z		; bind-key -n M-z		resize-pane -Z
-unbind-key C-left	; bind-key -r C-left	resize-pane -L 1
-unbind-key C-right	; bind-key -r C-right	resize-pane -R 1
-unbind-key C-up		; bind-key -r C-up		resize-pane -U 1
-unbind-key C-down	; bind-key -r C-down	resize-pane -D 1
-unbind-key M-+		; bind-key -n M-+		select-layout tiled
-
-# Other pane bindings
-unbind-key .		; bind-key .			display-panes
-unbind-key M-.		; bind-key -n M-.		display-panes
-unbind-key \;		; bind-key  \;			last-pane
-unbind-key M-\;		; bind-key -n M-\;		last-pane
-
-# Generic bindings
-unbind-key @		; bind-key @			confirm-before kill-window
-unbind-key r		; bind-key r			source-file ~/.tmux.conf
-unbind-key q		; bind-key q			list-keys
-unbind-key M-q		; bind-key -n M-q		list-keys
-unbind-key M-s		; bind-key -n M-s		set-window-option synchronize-panes on  \; display-message "Pane synchronisation ON"
-unbind-key M-d		; bind-key -n M-d		set-window-option synchronize-panes off \; display-message "Pane synchronisation OFF"
-
-# Copy mode
-set-window-option -g mode-keys vi
-set-option buffer-limit 10
-unbind-key up					; bind-key    up				copy-mode
-unbind-key down					; bind-key    down				copy-mode
-unbind-key M-NPage				; bind-key -n M-NPage			copy-mode
-unbind-key M-PPage				; bind-key -n M-PPage			copy-mode
-unbind-key M-i					; bind-key -n M-i				paste-buffer
-unbind-key M-ic					; bind-key -n M-ic				paste-buffer	# Insert key
-
-bind-key -T copy-mode-vi Escape  send-keys -X cancel
-bind-key -T copy-mode-vi v       send-keys -X begin-selection
-bind-key -T copy-mode-vi Space   send-keys -X begin-selection
-bind-key -T copy-mode-vi q       send-keys -X copy-selection-and-cancel
-bind-key -T copy-mode-vi Enter   send-keys -X copy-pipe-and-cancel 'xclip -in -selection primary'
-bind-key -T copy-mode-vi y       send-keys -X copy-pipe-and-cancel 'xclip -in -selection primary'
-bind-key -T copy-mode-vi b       send-keys -X rectangle-toggle
-bind-key -T copy-mode-vi Home    send-keys -X start-of-line
-bind-key -T copy-mode-vi End     send-keys -X end-of-line
-bind-key -T copy-mode-vi NPage   send-keys -X page-down
-bind-key -T copy-mode-vi PPage   send-keys -X page-up
-bind-key -T copy-mode-vi Up      send-keys -X cursor-up
-bind-key -T copy-mode-vi Down    send-keys -X cursor-down
-bind-key -T copy-mode-vi Left    send-keys -X cursor-left
-bind-key -T copy-mode-vi Right   send-keys -X cursor-right
-
-# Switch Mouse mode (default off)
-set-option -g mouse off
-bind m run "											\
-	tmux show-options -g | grep -q "mouse\\s*on";		\
-	if [ \$? = 0 ];										\
-	then												\
-		toggle=off;										\
-	else												\
-		toggle=on;										\
-	fi;													\
-	tmux display-message \"mouse is now: \$toggle\";	\
-	tmux set-option -w mouse \$toggle;					\
-	tmux set-option -g mouse \$toggle;					\
-"
-
-# List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-logging'
-
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
