Added default shell.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,6 +6,7 @@ unbind C-b
 # Set default options
 set -g prefix C-a
 set -g mouse on
+set -g default-shell /bin/zsh
 
 # Set pane options
 set -g pane-border-status top
