--- a/.tmux.conf
+++ b/.tmux.conf
@@ -25,6 +25,7 @@ set -g status-style fg=black,bg=yellow
 # Set window options
 setw -g mode-keys vi
 setw -g window-status-separator ' | '
+setw -g window-status-current-style fg=white,bg=black
 setw -g window-status-current-format '#{?pane_synchronized,#[fg=red]***#[default],}#I:#W#F#{?pane_synchronized,#[fg=red]***#[default],}'
 
 # Bind split commands
