--- a/.tmux.conf
+++ b/.tmux.conf
@@ -38,3 +38,6 @@ bind E setw synchronize-panes off
 
 # Bind reload command
 bind r source-file ~/.tmux.conf
+
+# Ctrl A + Ctrl A goes to the last windows
+bind-key C-a last
