--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,6 +6,7 @@ unbind C-b
 # Set default options
 set -g prefix C-a
 set -g mouse on
+set -g allow-rename off
 set -g default-shell /bin/zsh
 
 # Set pane options
@@ -37,7 +38,7 @@ bind e setw synchronize-panes on
 bind E setw synchronize-panes off
 
 # Bind reload command
-bind r source-file ~/.tmux.conf
+bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
 
 # Ctrl A + Ctrl A goes to the last windows
 bind-key C-a last
