Added rename pane

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -42,3 +42,6 @@ bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
 
 # Ctrl A + Ctrl A goes to the last windows
 bind-key C-a last
+
+# Rename Pane
+bind-key . command-prompt -p "Pane Title: " "select-pane -T '%1'"
