--- a/.tmux.conf
+++ b/.tmux.conf
@@ -44,4 +44,4 @@ bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
 bind-key C-a last
 
 # Rename Pane
-bind-key . command-prompt -p "Pane Title: " "select-pane -T '%1'"
+bind-key . command-prompt -p "(rename pane) " "select-pane -T '%1'"
