--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,6 +8,7 @@ set -g prefix C-a
 set -g mouse on
 set -g allow-rename off
 set -g default-shell /bin/zsh
+set -g renumber-windows on
 
 # Set pane options
 set -g pane-border-status top
