--- a/.tmux.conf
+++ b/.tmux.conf
@@ -45,4 +45,5 @@ bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
 bind-key C-a last
 
 # Rename Pane
-bind-key . command-prompt -p "(rename pane) " "select-pane -T '%1'"
+unbind .
+bind-key . command-prompt -p "(rename pane)" "select-pane -T '%1'"
