Added binding for window swap

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -47,3 +47,7 @@ bind-key C-a last
 # Rename Pane
 unbind .
 bind-key . command-prompt -p "(rename pane)" "select-pane -T '%1'"
+
+# Swap Windows
+bind-key -n S-Left swap-window -t -1
+bind-key -n S-Right swap-window -t +1
