Add mouse speed control

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -51,3 +51,7 @@ bind-key . command-prompt -p "(rename pane)" "select-pane -T '%1'"
 # Swap Windows
 bind-key -n S-Left swap-window -t -1
 bind-key -n S-Right swap-window -t +1
+
+# Control mouse scroll speed
+bind-key -T copy-mode-vi WheelUpPane send -N1 -X scroll-up
+bind-key -T copy-mode-vi WheelDownPane send -N1 -X scroll-down
