--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -103,8 +103,8 @@ disabled = false
 Macos = " "
 
 [username]
-style_user = 'blue bold'
-style_root = 'black bold'
+style_user = 'blue'
+style_root = 'white bold'
 format = '[$user]($style) '
 disabled = false
 show_always = true
