Add graph api option

--- a/.warp/workflows/vault/vault-secrets-engine-azure-config.yml
+++ b/.warp/workflows/vault/vault-secrets-engine-azure-config.yml
@@ -6,6 +6,7 @@ command: |-
     tenant_id={{tenant_id}} \
     client_id={{client_id}} \
     client_secret={{client_secret}}
+    use_microsoft_graph_api={{use_microsoft_graph_api}}
 tags:
   - vault
   - azure
@@ -26,6 +27,9 @@ arguments:
   - name: client_secret
     description: Password (Client Secret)
     default_value: xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+  - name: use_microsoft_graph_api
+    description: For all new requests, use this
+    default_value: true
 author: Chris van Meer
 author_url: https://chrisvanmeer.nl
 shells: []
