--- a/.warp/workflows/vault/vault-policy-azure-secrets-engine.yml
+++ b/.warp/workflows/vault/vault-policy-azure-secrets-engine.yml
@@ -20,7 +20,7 @@ tags:
 description: Write a policy to access dynamic secrets from Azure
 arguments:
   - name: policy_name
-    description: The name of Vault policy
+    description: The name of the policy
     default_value: ~
   - name: mount
     description: The name of the mount of the Secrets Engine
