Add new workflows for Boundary with Vault SSH

--- a/.warp/workflows/boundary/boundary-vault-credential-library-private-key.yaml
+++ b/.warp/workflows/boundary/boundary-vault-credential-library-private-key.yaml
@@ -1,14 +1,14 @@
 ---
-name: Boundary - Vault - Credential Library
+name: Boundary - Vault - Credential Library - Private Key
 command: |-
-  boundary credential-libraries create vault \
+  boundary credential-libraries create vault-generic \
     -credential-store-id {{cred_store_id}} \
     -vault-path "{{vault_path}}" \
     -name "{{cred_library_name}}" \
     -credential-type ssh_private_key
 tags:
   - boundary
-description: Creates a Vault Credential Library
+description: Creates a Vault Credential Library - Private Key
 arguments:
   - name: cred_store_id
     description: The ID of the Credentials Store
