--- a/.warp/workflows/vault/vault-token-create.yaml
+++ b/.warp/workflows/vault/vault-token-create.yaml
@@ -2,9 +2,9 @@
 name: Vault - Token - Create
 command: |-
   vault token create \
-    -no-default-policy={{no_default_policy}}
-    -orphan={{orphan}}
-    -renewable={{renewable}}
+    -no-default-policy={{no_default_policy}} \
+    -orphan={{orphan}} \
+    -renewable={{renewable}} \
     -policy={{policy_name}}
 tags:
   - vault
