Update tmux with copy drag

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -55,3 +55,7 @@ bind-key -n S-Right swap-window -t +1
 # Control mouse scroll speed
 bind-key -T copy-mode-vi WheelUpPane send -N1 -X scroll-up
 bind-key -T copy-mode-vi WheelDownPane send -N1 -X scroll-down
+
+# Stay in copy mode when dragging with mouse
+unbind -T copy-mode-vi MouseDragEnd1Pane
+bind -T copy-mode-vi MouseDown1Pane select-pane \; send-keys -X copy-pipe "pbcopy" \; send-keys -X clear-selection
